Убраны свойства ddl-auto, hbm2ddl.auto. Добавлены последовательности sequence и генератор последовательности. Фильтрация групп (по количеству студентов) и студентов (по курсам) помещена в методы findAll() соответственно. Убраны каскадное удаление групп и студентов. Добавлены @ResponseStatus. Отредактирован файл openapi-custom.yaml
