# src/main/resources/static/openapi-custom.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: OpenAPI definition
+  title: OpenAPI definitionnn
   description: API of the "School" task
   contact:
     name: Zhadaev Alexander
@@ -160,10 +160,10 @@ paths:
             schema:
               $ref: '#/components/schemas/GroupDto'
       responses:
-        '200':
-          description: Successful operation
+        '202':
+          description: Accepted
           content:
-            pplication/json:
+            application/json:
               schema:
                 $ref: '#/components/schemas/GroupDto'
     delete:
@@ -205,8 +205,8 @@ paths:
             schema:
               $ref: '#/components/schemas/GroupDto'
       responses:
-        '200':
-          description: Successful operation
+        '202':
+          description: Accepted
           content:
             application/json:
               schema:
@@ -260,8 +260,8 @@ paths:
               $ref: '#/components/schemas/CourseDto'
         required: true
       responses:
-        '200':
-          description: Successful operation
+        '202':
+          description: Accepted
           content:
             application/json:
               schema:
@@ -306,8 +306,8 @@ paths:
               $ref: '#/components/schemas/CourseDto'
         required: true
       responses:
-        '200':
-          description: Successful operation
+        '202':
+          description: Accepted
           content:
             application/json:
               schema:
@@ -322,6 +322,13 @@ paths:
         This method allows you to get a list of all school students.
       tags:
         - student-controller
+      parameters:
+        - name: courseId
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
       responses:
         '200':
           description: Successful operation
@@ -371,6 +378,13 @@ paths:
         This method allows you to get a list of all school groups
       tags:
         - group-controller
+      parameters:
+        - name: numberStudents
+          in: query
+          required: false
+          schema:
+            type: integer
+            format: int32
       responses:
         '200':
           description: Successful operation
@@ -394,13 +408,14 @@ paths:
             schema:
               $ref: '#/components/schemas/GroupDto'
       responses:
-        '200':
-          description: Successful operation
+        '201':
+          description: Created
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/GroupDto'
     delete:
+      summary: Delete all groups
       description: >
         This method removes all groups.
       tags:
@@ -442,8 +457,8 @@ paths:
               $ref: '#/components/schemas/CourseDto'
         required: true
       responses:
-        '200':
-          description: Successful operation
+        '201':
+          description: Created
           content:
             application/json:
               schema:
@@ -457,76 +472,8 @@ paths:
       responses:
         '200':
           description: Successful operation
-  /api/students/filter:
-    get:
-      summary: Get filtered students
-      description: >
-        This method allows you to get all students related to course with given name.
-      tags:
-        - student-controller
-      operationId: findAllFilter
-      parameters:
-        - name: courseId
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          description: The course id
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/StudentDto'
-  /api/groups/filter:
-    get:
-      summary: Get filtered groups
-      description: >
-        This method allows you to get all groups with the number of students less than or equal to the specifie.
-      tags:
-        - group-controller
-      parameters:
-        - name: numberStudents
-          in: query
-          required: true
-          schema:
-            type: integer
-            format: int32
-          description: >
-            Number of students in the group.
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/GroupDto'
 components:
   schemas:
-    Course:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        name:
-          type: string
-        description:
-          type: string
-    Group:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int32
-        name:
-          type: string
     StudentDto:
       type: object
       properties:
@@ -534,7 +481,7 @@ components:
           type: integer
           format: int32
         group:
-          $ref: '#/components/schemas/Group'
+          $ref: '#/components/schemas/GroupDto'
         firstName:
           type: string
         lastName:
@@ -543,7 +490,7 @@ components:
           uniqueItems: true
           type: array
           items:
-            $ref: '#/components/schemas/Course'
+            $ref: '#/components/schemas/CourseDto'
     GroupDto:
       type: object
       properties:
